Fixed Block Height

--- a/templates/metricitem.mustache
+++ b/templates/metricitem.mustache
@@ -6,7 +6,7 @@
   data-hasaverage="{{#showaverage}}1{{/showaverage}}"
   data-initial="{{#initial}}1{{/initial}}"
 >
-  <div class="container p-3 my-2" style="height: 8em; background-color: {{bgcolor}}; color: {{textcolor}};">
+  <div class="container p-3 my-2" style="min-height: 8em; background-color: {{bgcolor}}; color: {{textcolor}};">
     <div class="block_forumdashboard_metricitem_loading">
       {{> core/loading}}
       {{#str}}loading, block_forumdashboard{{/str}}
