--- a/templates/block.mustache
+++ b/templates/block.mustache
@@ -17,4 +17,7 @@
   {{#expandable}}<div class="row text-center">
     <button type="button" class="btn btn-secondary w-100 block_forumdashboard_expandbtn">{{#str}} viewmore, block_forumdashboard {{/str}}</button>
   </div>{{/expandable}}
+  <p class="text-right">
+    <small><i class="block_forumdashboard_lastupdated">{{> core/loading}}</i></small>
+  </p>
 </div>
