--- a/templates/metricitem.mustache
+++ b/templates/metricitem.mustache
@@ -5,11 +5,16 @@
   data-itemid="{{itemid}}"
   data-hasaverage="{{#showaverage}}1{{/showaverage}}"
   data-initial="{{#initial}}1{{/initial}}"
+  data-caching="{{#caching}}1{{/caching}}"
 >
   <div class="container p-3 my-2" style="min-height: 8em; background-color: {{bgcolor}}; color: {{textcolor}};">
     <div class="block_forumdashboard_metricitem_loading">
       {{> core/loading}}
       {{#str}}loading, block_forumdashboard{{/str}}
+    </div>
+    <div class="block_forumdashboard_metricitem_notavailable" style="display: none;">
+      <i class="fa fa-exclamation-triangle"></i>
+      {{#str}}notavailable, block_forumdashboard{{/str}}
     </div>
     <div class="block_forumdashboard_metricitem_content" style="display: none;">
       <div class="block_forumdashboard_metricitem_content_value"></div>
