Added coding comments

--- a/templates/block.mustache
+++ b/templates/block.mustache
@@ -1,49 +1,54 @@
 {{!
-  @template block_forumdashboard/block
+@template block_forumdashboard/block
 }}
 <div class="container-fluid block_forumdashboard_block" id="forumdashboard-{{instanceid}}">
-  <div class="row">
-    <label>
-      {{#str}} viewsummaryof, block_forumdashboard {{/str}}
-      <select class="block_forumdashboard_scopeselect form-control w-auto d-inline-block">
-        <option value="0">{{#str}} entiresite, block_forumdashboard {{/str}}</option>
-        {{#courses}}<option value="{{id}}">{{#str}} viewcourse, block_forumdashboard, {{fullname}} {{/str}}</option>{{/courses}}
-      </select>
-    </label>
-  </div>
-  {{#hasnotifications}}
-  <div class="row block_forumdashboard_notifications">
-    <div class="container-fluid">
-      <div class="card">
-        <div class="card-body">
-          <div class="mb-4">
-            <div class="float-right">
-              <a href="{{{dismissallurl}}}"><i class="fa fa-times"></i> {{#str}} dismissall, block_forumdashboard {{/str}}</a>
-            </div>
-            <h3 class="text-danger"><i class="fa fa-bell"></i> {{#str}}notifications{{/str}}</h3>
-          </div>
-          <div style="max-height: 250px; overflow-y: auto;">
-            {{#notifications}}
-              <div class="alert alert-primary block_forumdashboard_notification" data-course="{{course}}">
-                <a href="{{{url}}}">{{subject}}</a>
-                <span class="float-right">
-                  <a href="{{{dismissurl}}}"><i class="fa fa-times"></i></a>
-                </span>
-              </div>
-            {{/notifications}}
-          </div>
-        </div>
-      </div>
+    <div class="row">
+        <label>
+            {{#str}} viewsummaryof, block_forumdashboard {{/str}}
+            <select class="block_forumdashboard_scopeselect form-control w-auto d-inline-block">
+                <option value="0">{{#str}} entiresite, block_forumdashboard {{/str}}</option>
+                {{#courses}}<option value="{{id}}">{{#str}} viewcourse, block_forumdashboard, {{fullname}} {{/str}}
+                </option>
+                {{/courses}}
+            </select>
+        </label>
     </div>
-  </div>
-  {{/hasnotifications}}
-  <div class="row">
-    {{{content}}}
-  </div>
-  {{#expandable}}<div class="row text-center">
-    <button type="button" class="btn btn-secondary w-100 block_forumdashboard_expandbtn">{{#str}} viewmore, block_forumdashboard {{/str}}</button>
-  </div>{{/expandable}}
-  <p class="text-right">
-    <small><i class="block_forumdashboard_lastupdated">{{> core/loading}}</i></small>
-  </p>
+    {{#hasnotifications}}
+    <div class="row block_forumdashboard_notifications">
+        <div class="container-fluid">
+            <div class="card">
+                <div class="card-body">
+                    <div class="mb-4">
+                        <div class="float-right">
+                            <a href="{{{dismissallurl}}}"><i class="fa fa-times"></i> {{#str}} dismissall,
+                                block_forumdashboard
+                                {{/str}}</a>
+                        </div>
+                        <h3 class="text-danger"><i class="fa fa-bell"></i> {{#str}}notifications{{/str}}</h3>
+                    </div>
+                    <div style="max-height: 250px; overflow-y: auto;">
+                        {{#notifications}}
+                        <div class="alert alert-primary block_forumdashboard_notification" data-course="{{course}}">
+                            <a href="{{{url}}}">{{subject}}</a>
+                            <span class="float-right">
+                                <a href="{{{dismissurl}}}"><i class="fa fa-times"></i></a>
+                            </span>
+                        </div>
+                        {{/notifications}}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {{/hasnotifications}}
+    <div class="row">
+        {{{content}}}
+    </div>
+    {{#expandable}}<div class="row text-center">
+        <button type="button" class="btn btn-secondary w-100 block_forumdashboard_expandbtn">{{#str}} viewmore,
+            block_forumdashboard {{/str}}</button>
+    </div>{{/expandable}}
+    <p class="text-right">
+        <small><i class="block_forumdashboard_lastupdated">{{> core/loading}}</i></small>
+    </p>
 </div>
